--- a/boringlecture.html
+++ b/boringlecture.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
     <title>The Most Boring Lecture!</title>
   </head>
   <body>
